[gd_scene load_steps=20 format=3 uid="uid://bo88c24ncq05i"]

[ext_resource type="Script" uid="uid://cu6dhd7kmuab5" path="res://Scripts/Player1.gd" id="1_tmly4"]
[ext_resource type="Texture2D" uid="uid://bs331tf2s1in6" path="res://Assets/Player/justaguy.png" id="2_x4xop"]
[ext_resource type="Texture2D" uid="uid://vw251op1aeix" path="res://Assets/Player/justaguyWALKIN.png" id="3_wf7eb"]

[sub_resource type="Theme" id="Theme_acaa7"]
default_base_scale = 30.0
default_font_size = 60

[sub_resource type="AtlasTexture" id="AtlasTexture_5v6n0"]
atlas = ExtResource("2_x4xop")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2now"]
atlas = ExtResource("2_x4xop")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_csw4r"]
atlas = ExtResource("2_x4xop")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_mevkd"]
atlas = ExtResource("2_x4xop")
region = Rect2(0, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_n436r"]
atlas = ExtResource("2_x4xop")
region = Rect2(256, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_61iix"]
atlas = ExtResource("2_x4xop")
region = Rect2(512, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4u7t"]
atlas = ExtResource("3_wf7eb")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_rk7m0"]
atlas = ExtResource("3_wf7eb")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_2y743"]
atlas = ExtResource("3_wf7eb")
region = Rect2(0, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_sa0rg"]
atlas = ExtResource("3_wf7eb")
region = Rect2(256, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_iasjo"]
atlas = ExtResource("3_wf7eb")
region = Rect2(512, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_sbnf2"]
atlas = ExtResource("3_wf7eb")
region = Rect2(0, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_pi4hb"]
atlas = ExtResource("3_wf7eb")
region = Rect2(256, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_244hw"]
atlas = ExtResource("3_wf7eb")
region = Rect2(512, 512, 256, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_avtfg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5v6n0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2now")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_csw4r")
}],
"loop": true,
"name": &"Choosing",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mevkd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n436r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61iix")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4u7t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rk7m0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2y743")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sa0rg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iasjo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbnf2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pi4hb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_244hw")
}],
"loop": true,
"name": &"Moving",
"speed": 5.0
}]

[node name="Player1" type="Node2D"]
scale = Vector2(0.05, 0.05)
script = ExtResource("1_tmly4")

[node name="UI" type="Control" parent="."]
z_index = 1
layout_mode = 3
anchors_preset = 0
offset_left = 1.52588e-05
offset_right = 100.0
offset_bottom = 100.0

[node name="Button" type="Button" parent="UI"]
layout_mode = 0
offset_left = 200.0
offset_top = -100.0
offset_right = 480.0
offset_bottom = 40.0
text = "Roll Dice"

[node name="Button2" type="Button" parent="UI"]
layout_mode = 0
offset_left = 200.0
offset_top = 50.0
offset_right = 480.0
offset_bottom = 190.0
text = "Use Stamina
"

[node name="SpinBox" type="SpinBox" parent="UI"]
light_mask = 3
custom_minimum_size = Vector2(240, 140)
layout_mode = 0
offset_left = 200.0
offset_top = 50.0
offset_right = 470.0
offset_bottom = 190.0
theme = SubResource("Theme_acaa7")

[node name="ChoiceContainer" type="VBoxContainer" parent="UI"]
layout_mode = 0
offset_left = -100.0
offset_top = -220.0
offset_right = 60.0
offset_bottom = -120.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_avtfg")
animation = &"Choosing"

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2.98, 2.98)

[connection signal="pressed" from="UI/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="UI/Button2" to="." method="_on_use_stamina_pressed"]
